# lab-pilot-demo-ws

./: .gitignore  CLAUDE.md  README.md  SPEC-security.md  package.json  pnpm-lock.yaml  progress.md  quasar.config.ts
.github/workflows/: deploy.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_ss_managers.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/api/: admin.py  auth.py  devices.py  logs.py  materials.py  results.py  workflows.py  ws.py  ws_manager_client.py
backend/app/core/: logger.py
backend/app/middleware/: logging_middleware.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
device_simulator/: SPEC.md  pyproject.toml
device_simulator/simulator/: __main__.py  main.py
device_simulator/simulator/devices/: TemperatureController.sila.xml  balance.py  furnace.py
device_simulator/tasks/: plan.md  todo.md
device_simulator/tests/: test_balance_sim.py  test_furnace_sim.py
frontend/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  quasar.config.ts
frontend/e2e/: auth.spec.ts  experiment.spec.ts  navigation.spec.ts  workflow.spec.ts
frontend/src/: config.ts  env.d.ts
src/composables/: useExperimentRunner.ts  useSilaDevices.ts  useWorkflows.ts
src/layouts/: MainLayout.vue
src/pages/: ExperimentPage.vue  LogsPage.vue  MonitoringPage.vue  WorkflowPage.vue
src/router/: routes.ts
tasks/: security-plan.md  security-todo.md
worklog/: worklog_2026-04-14.md  worklog_2026-04-15.md  worklog_2026-04-16.md  worklog_2026-04-20.md  worklog_2026-04-21.md  worklog_2026-04-22.md  worklog_2026-04-23.md  worklog_2026-04-24.md
(+53 files in other folders)
